# Graphics-Project

./: README.md
Backup/: Assignment2.cpp  GraphicsProject.cpp  OmarGava's.cpp  TaskK&L.cpp  TaskT.cpp  TaskU.cpp
Final/: CMakeLists.txt  Circle.h  Clippings.h  Curve.h  Elipse.h  Fillings.cpp  Fillings.h  Final.cpp  Final.rc  Final.sln  Final.vcxproj  Final.vcxproj.filters  GraphicsProject.cpp  GraphicsProject.vcxproj  GraphicsProject.vcxproj.filters  Line.h  UJtils.h  file.txt
Final/Debug/: GraphicsProject.exe.recipe  GraphicsProject.res  vc142.idb
Final/Debug/GraphicsProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicsProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
